--- a/roles/openvpn-server/templates/vars.j2
+++ b/roles/openvpn-server/templates/vars.j2
@@ -4,3 +4,4 @@ export KEY_CITY="{{ openvpn_key_city }}"
 export KEY_ORG="{{ openvpn_key_org }}"
 export KEY_EMAIL="{{ openvpn_email }}"
 export KEY_OU="{{ openvpn_key_ou }}"
+export KEY_NAME="{{ openvpn_server }}"
