--- a/roles/openvpn-server/templates/vars.j2
+++ b/roles/openvpn-server/templates/vars.j2
@@ -5,3 +5,4 @@ export KEY_ORG="{{ openvpn_key_org }}"
 export KEY_EMAIL="{{ openvpn_email }}"
 export KEY_OU="{{ openvpn_key_ou }}"
 export KEY_NAME="{{ openvpn_server }}"
+export KEY_DIR="{{ openvpn_rsa_ca_dir }}"
